--- a/index.html
+++ b/index.html
@@ -21,10 +21,38 @@
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
-  
+  <script>
+(function (d, w) {
+  var BORDER_WIDTH = 2;
+  var sizes = [200, 300];
+  var currentSize = 0;
+  postSize(sizes[currentSize]);
+
+  d.getElementById('action').onclick = function(event) {
+    postSize(sizes[currentSize]);
+  }
+
+  function postSize(size) {
+    console.log('post new embed-size: ' + size + 'x' + size);
+    d.getElementById('size').innerHTML = size + 'x' + size;
+    var box = d.getElementById('box');
+    box.style.width = size - BORDER_WIDTH + 'px';
+    box.style.height = size - BORDER_WIDTH + 'px';
+    currentSize = (currentSize + 1) % sizes.length;
+
+    w.parent.postMessage({
+      sentinel: 'amp',
+      type: 'embed-size',
+      height: size,
+      width: size
+    }, '*');
+
+  }
+})(document, window);
+  </script>
 </head>
 <body>
-  <section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="289250129.727bfe1.5a3356c31c0c4e60ab90bead3a643b69" data-per-row-grid="4" id="instagram-feed-block-j" data-rv-view="0" style="background-image: url(assets/images/instagram-background.jpg); padding-top: 40px; padding-bottom: 40px;">
+  <section class="mbr-instagram-feed" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="289250129.727bfe1.5a3356c31c0c4e60ab90bead3a643b69" data-per-row-grid="4" id="instagram-feed-block-n" data-rows="2" data-rv-view="0" style="background-image: url(assets/images/instagram-background.jpg); padding-top: 40px; padding-bottom: 40px;">
     
     <div class="container container_toggle">
         <div class="row">
@@ -33,6 +61,7 @@
                     <h1 class="inst__title align-center mbr-fonts-style display-2">Instagram Feed</h1>
                     <div class="inst__content"></div>
                     <div class="inst__more mbr-section-btn align-center" buttons="0"><a class="btn btn-md btn-primary display-4" href="#">Show more</a></div>
+                    <div class="mbr-section-btn" align-center"="" buttons="0"><a class="btn btn-md btn-primary display-4" href="#">Show more</a></div>
                 </div>
             </div>
         </div>
@@ -40,7 +69,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.me/i">web creation software</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.me/r">free bootstrap templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
