--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </script>
 </head>
 <body>
-  <section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="289250129.727bfe1.5a3356c31c0c4e60ab90bead3a643b69" data-per-row-grid="4" id="instagram-feed-block-q" data-rv-view="0" style="background-image: url(assets/images/instagram-background.jpg); padding-top: 40px; padding-bottom: 40px;">
+  <section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="289250129.727bfe1.5a3356c31c0c4e60ab90bead3a643b69" data-per-row-grid="4" id="instagram-feed-block-r" data-rv-view="0" style="background-image: url(assets/images/instagram-background.jpg); padding-top: 40px; padding-bottom: 40px;">
     
     <div class="container container_toggle">
         <div class="row">
@@ -61,19 +61,10 @@
                     <h1 class="inst__title align-center mbr-fonts-style display-2">Instagram Feed</h1>
                     <div class="inst__content"></div>
                     <div class="inst__more mbr-section-btn align-center" buttons="0"><a class="btn btn-md btn-primary display-4" href="#">Show more</a></div>
-                    <button id="action">Resize</button>
                 </div>
             </div>
         </div>
     </div>
-    <script>
-    action.onclick = window.parent.postMessage({
-    sentinel: 'amp',
-    type: 'embed-size',
-    height: document.body.scrollHeight
-    }, '*');
-
-    </script>
 </section>
 
 
